Agregando dirección BCH por si dejan propina

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 	</ul>
       </div>
       <div class="publicity">
+	<figure>
+	  <img src="qrcode.png" alt="Dirección bitcoin cash">
+	  <figcaption class="text-center">Bitcoin cash</figcaption>
+	</figure>
       </div>
       <footer class="footer">
         <p id="copy-right">Copyright</p>
