Agregando soporte para pago de factura telfónica

--- a/index.html
+++ b/index.html
@@ -22,21 +22,33 @@
 	</ol>
       </div>
       <div class="content">
-	<ul class="block-flex">
-	  <li data-controller="bpa">
+	<div class="operations">
+	  <div>
 	    <input id="bpa-new-card" type="text" pattern="\d{4} \d{4} \d{4} \d{4}" maxlength="19" placeholder="Registrar tarjeta" />
-	    <a class="btn-bpa" id="bpa-add-card" href="#" data-bpa-target="registerAccount" >✅</a>
-	  </li>
-	  <li>
-	    <a class="btn-bpa" href="tel:*444*40*01#">Autenticarse</a>
-	  </li>
-	  <li>
-	    <a class="btn-bpa" href="tel:*444*46#">Consultar saldo</a>
-	  </li>
-	  <li>
-	    <a class="btn-bpa" href="tel:*444*48#">Últimas operaciones</a>
-	  </li>
-	</ul>
+	    <a class="btn-bpa" id="bpa-add-card" href="#">✅</a>
+	  </div>
+	  <div>
+	    <a class="btn-bpa" href="tel:*444*40*01#">Autenticarse en BPA</a>
+	  </div>
+	  <div>
+	    <a class="btn-bandec" href="tel:*444*40*02#">Autenticarse en Bandec</a>
+	  </div>
+	  <div>
+	    <a class="btn" href="tel:*444*70#">Cerrar sesión</a>
+	  </div>	  
+	  <div>
+	    <a class="btn" href="tel:*444*46#">Consultar saldo</a>
+	  </div>
+	  <div>
+	    <a class="btn" href="tel:*444*48#">Últimas operaciones</a>
+	  </div>
+	  <div>
+	    <a class="btn"  href="tel:*444*59#" >Recargar cuenta nauta</a>
+	  </div>
+	  <div>
+	    <a class="btn"  href="tel:*444*42#" >Pagar factura telefónica</a>
+	  </div>
+	</div>
       </div>
       <div class="publicity">
 	<figure>
