--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="manifest" href="manifest.json">
-    <link href="main.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/main.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container center">
@@ -62,6 +62,6 @@
       <footer class="footer">
         <p id="copy-right">Copyright</p>
       </footer>
-      <script src="main.js"></script>
+      <script src="assets/js/main.js"></script>
   </body>
 </html>
