Agregado código ussd para pagar la factura de electricidad

--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
     <div class="container center">
       <div class="header"><h1>Demo transfermovil en la web </h1></div>
       <div class="menu">
-	<ol>
-	  <li><a href="#">Banco Popular de Ahorro</a></li>
-	  <li><a href="#">Acción 2</a></li>
-	  <li><a href="#">Acción 3</a></li>
-	  <li><a href="#">Acción 4</a></li>
-	</ol>
       </div>
       <div class="content">
 	<div class="operations">
@@ -47,6 +41,9 @@
 	  </div>
 	  <div>
 	    <a class="btn"  href="tel:*444*59#" >Recargar cuenta nauta</a>
+	  </div>
+	  <div>
+	    <a class="btn"  href="tel:*444*41#" >Pagar factura de eléctridad</a>
 	  </div>
 	  <div>
 	    <a class="btn"  href="tel:*444*42#" >Pagar factura telefónica</a>
